# Human-posture-detection-with-Yolo-HRNet

./: CMakeLists.txt  README.md
.github/workflows/: Cmake.yml  cmake-windows.yml
demo/: image_util.cpp  image_util.hpp
include/data/: tensor.hpp
include/layer/: layer.hpp  layer_factory.hpp
include/layer/abstract/: layer_factory.hpp  param_layer.hpp
include/parser/: parse_expression.hpp
include/runtime/: runtime_datatype.hpp  runtime_op.hpp  runtime_operand.hpp
source/data/: load_data.cpp  tensor.cpp
source/layer/abstract/: layer.cpp  layer_factory.cpp  param_layer.cpp
source/layer/details/: adaptive_avgpooling.cpp  adaptive_avgpooling.hpp  batchnorm2d.cpp  batchnorm2d.hpp  convolution.cpp  convolution.hpp  expression.cpp  expression.hpp  linear.cpp  linear.hpp  maxpooling.cpp  maxpooling.hpp  prelu.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  softmax.cpp  softmax.hpp  upsample_nearest.cpp  view.cpp
source/parse/: parse_expression.cpp
source/runtime/: ir.h  runtime_attr.cpp  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  store_zip.hpp
test/: CMakeLists.txt  test_main.cpp
test/test_runtime/: test_attr.cpp
